[package]
name = "ankura"
version = "0.3.3"
edition = "2021"
authors = ["Lucas Rangel"]
description = "Karabiner configuration using Apple Pkl language"
license = "MIT"
repository = "https://github.com/lrangell/ankura"

[lib]
name = "ankura"
path = "src/lib.rs"

[[bin]]
name = "ankura"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
notify-rust = "4.11"
dirs = "5.0"
shellexpand = "3.1"
which = "6.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { version = "8.5", features = ["include-exclude"] }
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1.0"
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
tokio-test = "0.4"
tempfile = "3.10"
